updated plotting functionality and prototyped downloading WFPC2 data

--- a/lib/prototyping_download.ipynb
+++ b/lib/prototyping_download.ipynb
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obsTable = Observations.query_criteria(project='HST',\n",
-    "                                      instrument_name = 'WFPC2/WFC',\n",
+    "obsTable = Observations.query_criteria(obs_collection='HST',\n",
+    "                                      instrument_name = 'WFPC2',\n",
     "                                      obstype='cal',\n",
     "                                      target_name = 'DARK')\n",
     "df = obsTable.to_pandas()"
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "obsTable = Observations.query_criteria(project='HST',\n",
-    "                                      instrument_name='WFPC2/WFC',\n",
+    "                                      instrument_name='WFPC2',\n",
     "                                      obstype ='cal',\n",
     "                                      target_name='DARK',\n",
     "                                      t_min=[dates[0].mjd, dates[1].mjd],\n",
@@ -166,7 +166,7 @@
    "source": [
     "filtered_products = Observations.filter_products(products,\n",
     "                                                 mrp_only=False,\n",
-    "                                                 productSubGroupDescription=['D0M','D1M'])"
+    "                                                 productSubGroupDescription=['C0M','C1M','SHM'])"
    ]
   },
   {
@@ -216,7 +216,7 @@
     "manifest = Observations.download_products(download_list[:10],\n",
     "                                          download_dir='./../crrejtab/WFPC2/',\n",
     "                                          mrp_only=False,\n",
-    "                                         productSubGroupDescription=['D0M','D1M'])"
+    "                                         productSubGroupDescription=['C0M','SHM'])"
    ]
   },
   {
