evaluated new thresholds for WFPC2 data, implemented conversion to electrons via GAIN, implemented resampling capability in plotting to reduce number of datapoints (rather than to just smooth)

--- a/lib/prototyping_wfpc2.ipynb
+++ b/lib/prototyping_wfpc2.ipynb
@@ -77,16 +77,16 @@
     "    threshold = detect_threshold(sci_data[0], snr=5.)\n",
     "    \n",
     "    # Generate a kernel for use in the segmentation mapping, normalize it's value to 1\n",
-    "    sigma = 2. * gaussian_fwhm_to_sigma # convert FWHM of 2.75 pix to sigma\n",
-    "    kernel = Gaussian2DKernel(sigma, x_size=5, y_size=5)\n",
+    "    sigma = 1 * gaussian_fwhm_to_sigma # convert FWHM of 2.75 pix to sigma\n",
+    "    kernel = Gaussian2DKernel(sigma, x_size=3, y_size=3)\n",
     "    kernel.normalize()\n",
     "    data_list, segm_list = [], []\n",
-    "    for data in sci_data[:2]:\n",
+    "    for data in sci_data:\n",
     "    # Find sources\n",
     "        mean, median, std = sigma_clipped_stats(data, sigma_lower = 3, sigma_upper= 2)\n",
     "        print('mean: {}, median: {}, std: {}'.format(mean, median, std))\n",
     "        segm = detect_sources(data-median,\n",
-    "                          threshold=median+10*std,\n",
+    "                          threshold=median+5*std,\n",
     "                          npixels=4,\n",
     "                          filter_kernel=kernel,\n",
     "                          connectivity=8)\n",
@@ -132,9 +132,12 @@
    "source": [
     "\n",
     "f_1000 = []\n",
+    "t_exptime = []\n",
     "for f in flist:\n",
-    "    if fits.getval(f,'exptime') > 1000:\n",
-    "        f_1000.append(f)"
+    "    t = fits.getval(f, 'exptime')\n",
+    "    if t > 1000:\n",
+    "        f_1000.append(f)\n",
+    "        t_exptime.append(t)"
    ]
   },
   {
@@ -171,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_val = np.where(data1_list[1] > 3.8386406898498535 + 10*1.1404046418166893, 1, 0)"
+    "high_val = np.where(data1_list[0] > 4.160646625864344 + 5*1.1595283054779255, 1, 0)"
    ]
   },
   {
@@ -234,11 +237,15 @@
     "fig, axes = plt.subplots(nrows=2, ncols=2, sharex=True, sharey=True, figsize=(6,6))\n",
     "norm = ImageNormalize(data1_list[0], stretch=LogStretch(), vmin=0, vmax=500)\n",
     "\n",
-    "axes[0, 0].imshow(data1_list[1], norm=norm, cmap='gray', origin='lower')\n",
-    "axes[0, 1].imshow(segm1_list[1].data, origin='lower', cmap=segm1_list[1].cmap(random_state=1245))\n",
+    "axes[0, 0].imshow(data1_list[0], norm=norm, cmap='gray', origin='lower')\n",
+    "# axes[0, 1].imshow(segm1_list[0].data, origin='lower', cmap=segm1_list[0].cmap(random_state=1245))\n",
+    "axes[0, 1].imshow(data1_list[1], norm=norm, cmap='gray', origin='lower')\n",
     "\n",
-    "axes[1, 0].imshow(data1_list[1], norm=norm, cmap='gray', origin='lower')\n",
-    "axes[1, 1].imshow(high_val, origin='lower', cmap=cmap)"
+    "axes[1, 0].imshow(data1_list[2], norm=norm, cmap='gray', origin='lower')\n",
+    "# axes[1, 1].imshow(high_val, origin='lower', cmap=cmap)\n",
+    "axes[1, 1].imshow(data1_list[3], norm=norm, cmap='gray', origin='lower')\n",
+    "axes[0, 0].set_xlim(460, 470)\n",
+    "axes[0, 0].set_ylim(415, 430)"
    ]
   },
   {
@@ -247,7 +254,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(np.unique(segm1_list[1].data))/1800"
+    "len(np.unique(segm1_list[0].data))/t_exptime[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(np.unique(label))/t_exptime[0]"
    ]
   },
   {
