small changes to formatting in the notebook

--- a/notebooks/analyzing_cr_rejection.ipynb
+++ b/notebooks/analyzing_cr_rejection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,18 +102,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean: 40.249\n",
+      "median: 25.989\n",
+      "std: 58.571\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"mean: {global_mean:.3f}\\nmedian: {global_median:.3f}\\nstd: {global_std:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plot_image(data, norm=norm, units=units, title=f\"Exposure Time: {exptime:0.0f}s\")"
    ]
@@ -122,14 +147,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Making interactive plots\n",
-    "- The first method involves add a slider to a plot and redirecting the output\n",
-    "- The second method involves using the ipympl widget backend"
+    "### Visualization the CR rejection algorithm\n",
+    "- The following cells contain a series of functions and widgets that are combined to create an interactive visualization tool for analyzing the principles behind the CR algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,26 +165,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method 1"
+    "Define some preset values and analyze the list of data to extract the pixel value for "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "x0=434\n",
     "y0=434\n",
-    "pixval = []\n",
-    "for f in flist:\n",
-    "    data = fits.getdata(f)\n",
-    "    pixval.append(data[y0][x0])"
+    "# pixval = []\n",
+    "# for f in flist:\n",
+    "#     data = fits.getdata(f)\n",
+    "#     pixval.append(data[y0][x0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,33 +262,43 @@
     "    \n",
     "    \n",
     "    ax.clear()\n",
-    "    pixval = []\n",
+    "    pixvals = []\n",
     "    scatter_color = []\n",
     "    scatter_marker = []\n",
-    "    for f in flist:\n",
+    "    labels = []\n",
+    "    for i, f in enumerate(flist):\n",
     "        data = fits.getdata(f)\n",
+    "        pixval = data[y][x]\n",
+    "        pixvals.append(pixval)\n",
     "        if f == current_file:\n",
-    "            scatter_color.append(current_img_color)\n",
+    "            current_im = ax.scatter(i+1, pixval, label=f\"Current: {pixval:.2f}\", c=current_img_color)\n",
     "        else:\n",
-    "            scatter_color.append(c)\n",
-    "        pixval.append(data[y][x])\n",
+    "            ax.scatter(i+1, pixval, c=c)\n",
+    "        \n",
     "   \n",
-    "    scat = ax.scatter([i for i in range(1,len(pixval)+1)], pixval,c=scatter_color )\n",
+    "#     scat = ax.scatter([i for i in range(1,len(pixval)+1)], pixval, label=labels, c=scatter_color )\n",
     "#     ax.set_title(os.path.basename(current_file))\n",
     "    ax.set_xlim((0,22))\n",
-    "    ax.axhline(np.median(pixval),ls='--',c='k', label='median')\n",
-    "    ax.axhline(np.mean(pixval), ls='-', c='k', label='mean')\n",
-    "    ax.axhline(np.min(pixval, axis=0), ls=':', c='k', label='minimum')\n",
+    "    med = np.nanmedian(pixvals, axis=0)\n",
+    "    mean = np.nanmean(pixvals, axis=0)\n",
+    "    minim = np.nanmin(pixvals, axis=0)\n",
+    "    std = np.nanstd(pixvals, axis=0)\n",
+    "    ax_med = ax.axhline(med,ls='--',c='k', label=f\"med: {med:.2f}\")\n",
+    "    ax_mean = ax.axhline(mean, ls='-', c='k', label=f\"mean: {mean:.2f}\")\n",
+    "    ax_min = ax.axhline(minim, ls=':', c='k', label=f\"min: {minim:.2f}\")\n",
     "    if ymin is None or ymax is None:\n",
-    "        ax.set_ylim((0, median+5*std))\n",
+    "        ax.set_ylim((0, ymax+2*std))\n",
     "    else:\n",
     "        ax.set_ylim((ymin, ymax))\n",
     "    ax.set_ylabel(units)\n",
     "    ax.xaxis.set_minor_locator(AutoMinorLocator(5))\n",
     "    ax.yaxis.set_minor_locator(AutoMinorLocator(5))\n",
     "    ax.tick_params(axis='both', which='both', width=1.5)\n",
-    "    ax.legend(loc='upper right', edgecolor='k')\n",
-    "    return scat"
+    " \n",
+    "    ax_legend = ax.legend(handles=[current_im, ax_med, ax_mean, ax_min],\n",
+    "                          loc='upper right', edgecolor='k')\n",
+    "    \n",
+    "    return ax"
    ]
   },
   {
@@ -276,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,13 +365,13 @@
     "    max=200,\n",
     "    step=5,\n",
     "    value=20,\n",
-    "    description='Heights',\n",
+    "    description='Height',\n",
     "    disabled=False,\n",
     "    continuous_update=True,\n",
     "    orientation='horizontal',\n",
     "    readout=True \n",
     ")\n",
-    "ymin = widgets.IntText(\n",
+    "ymin_slider = widgets.IntText(\n",
     "    options=[i for i in range(1,1025)],\n",
     "    value=0,\n",
     "    description='ymin',\n",
@@ -346,9 +380,9 @@
     "    orientation='horizontal',\n",
     "    readout=True \n",
     ")\n",
-    "ymax = widgets.IntText(\n",
+    "ymax_slider = widgets.IntText(\n",
     "    options=[i for i in range(1,1025)],\n",
-    "    value=global_mean+10*global_std,\n",
+    "    value= global_mean + 5*global_std,\n",
     "    description='ymax',\n",
     "    disabled=False,\n",
     "    continuous_update=True,\n",
@@ -359,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +427,7 @@
     "    w2 = interactive(\n",
     "        plot_pix_vals, \n",
     "        current_file=file_slider2,\n",
-    "        x=xslider, y=yslider, w=wslider, h=hslider, ymin=ymin, ymax=ymax,\n",
+    "        x=xslider, y=yslider, w=wslider, h=hslider, ymin=ymin_slider, ymax=ymax_slider,\n",
     "        flist=fixed(flist), ax=fixed(ax2),\n",
     "        units=fixed('COUNTS'), current_img_color=fixed('r'), c=fixed('k')\n",
     "    )\n",
@@ -404,39 +438,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax2.set_ylim(-20, 80)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.close('all')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.close('all')\n",
     "out.clear_output()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 266,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e56784aef684491190edb6ff5d92201c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='1px solid black'), outputs=({'output_type': 'display_data', 'data': {'text/plain'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "out"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
