updates to accomodate testing, added cell for computing the noise model used by occreject to display in the visualization demonstrating how the cr rejection algorithm works, added new module to perform the lableing analysis, added new module to the testing repo that facilitates viiewing and comparing the output

--- a/notebooks/analyzing_cr_rejection.ipynb
+++ b/notebooks/analyzing_cr_rejection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/stis_test/long_clean'"
+    "data_path = '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,21 +57,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "N=20\n",
-    "flist = glob.glob(data_path+'/*flt.fits')[:N]"
+    "flist = glob.glob(data_path+'*flt.fits')[:N]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbcschq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbbpa4q_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbc2e6q_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbc5ewq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbcvbaq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbc0zfq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbbozpq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbd8f2q_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbbnzlq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbctg8q_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbbxuxq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbd7exq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbcakxq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbcff4q_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbbshtq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbcxg2q_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbc9ksq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbd2q6q_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbcmnfq_flt.fits',\n",
+       " '/Users/nmiles/hst_cosmic_rays/analyzing_cr_rejection/1100.0_clean/odvbczk5q_flt.fits']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flist\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdu = fits.open(flist[0])\n",
+    "hdu = fits.open(flist[1])\n",
+    "hdr = hdu[0].header\n",
     "data = hdu[1].data\n",
     "units = hdu[1].header['BUNIT']\n",
     "exptime = hdu[0].header['TEXPTIME']\n",
@@ -80,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: 40.249\n",
-      "median: 25.989\n",
-      "std: 58.571\n"
+      "mean: 35.487\n",
+      "median: 22.442\n",
+      "std: 53.803\n"
      ]
     }
    ],
@@ -121,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +180,7 @@
     }
    ],
    "source": [
-    "plot_image(data, norm=norm, units=units, title=f\"Exposure Time: {exptime:0.0f}s\")"
+    "plot_image(data, norm=norm1, units=units, title=f\"Exposure Time: {exptime:0.0f}s\")"
    ]
   },
   {
@@ -153,7 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_noise_model(hdr, val, scalense=10):\n",
+    "    readnse = hdr['READNSE']/ hdr['ATODGAIN']\n",
+    "    poisson = val/hdr['ATODGAIN']\n",
+    "    total_noise = np.sqrt(readnse**2 + poisson**2 + (scalense*0.01 * val))\n",
+    "    return total_noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,21 +223,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x0=434\n",
-    "y0=434\n",
-    "# pixval = []\n",
-    "# for f in flist:\n",
-    "#     data = fits.getdata(f)\n",
-    "#     pixval.append(data[y0][x0])"
+    "x0=212\n",
+    "y0=704\n",
+    "pixval = []\n",
+    "for f in flist:\n",
+    "    data = fits.getdata(f)\n",
+    "    pixval.append(data[y0][x0])\n",
+    "med = np.nanmedian(pixval)\n",
+    "minim = np.nanmin(pixval)\n",
+    "noisemodel = compute_noise_model(hdr=hdr, val=med, scalense=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,12 +311,14 @@
     "    x=512, \n",
     "    y=512, \n",
     "    ax=None,\n",
+    "    med=None,\n",
+    "    minim=None,\n",
     "    units=None,\n",
     "    ymin=None,\n",
     "    ymax=None,\n",
+    "    crsigmas=None,\n",
+    "    noisemodel= None\n",
     "):\n",
-    "    \n",
-    "    \n",
     "    ax.clear()\n",
     "    pixvals = []\n",
     "    scatter_color = []\n",
@@ -273,19 +331,22 @@
     "        if f == current_file:\n",
     "            current_im = ax.scatter(i+1, pixval, label=f\"Current: {pixval:.2f}\", c=current_img_color)\n",
     "        else:\n",
-    "            ax.scatter(i+1, pixval, c=c)\n",
+    "            nom = ax.scatter(i+1, pixval, c=c)\n",
     "        \n",
     "   \n",
     "#     scat = ax.scatter([i for i in range(1,len(pixval)+1)], pixval, label=labels, c=scatter_color )\n",
     "#     ax.set_title(os.path.basename(current_file))\n",
+    "    \n",
     "    ax.set_xlim((0,22))\n",
-    "    med = np.nanmedian(pixvals, axis=0)\n",
-    "    mean = np.nanmean(pixvals, axis=0)\n",
-    "    minim = np.nanmin(pixvals, axis=0)\n",
-    "    std = np.nanstd(pixvals, axis=0)\n",
+    "    med = np.nanmedian(pixvals)\n",
+    "    minim = np.nanmin(pixvals)\n",
     "    ax_med = ax.axhline(med,ls='--',c='k', label=f\"med: {med:.2f}\")\n",
-    "    ax_mean = ax.axhline(mean, ls='-', c='k', label=f\"mean: {mean:.2f}\")\n",
+    "    ax_noise = ax.axhline(med + crsigmas * noisemodel, label=f\"med + {crsigmas:.0f}$\\sigma$\")\n",
+    "    \n",
+    "    \n",
     "    ax_min = ax.axhline(minim, ls=':', c='k', label=f\"min: {minim:.2f}\")\n",
+    "    \n",
+    "    \n",
     "    if ymin is None or ymax is None:\n",
     "        ax.set_ylim((0, ymax+2*std))\n",
     "    else:\n",
@@ -295,7 +356,7 @@
     "    ax.yaxis.set_minor_locator(AutoMinorLocator(5))\n",
     "    ax.tick_params(axis='both', which='both', width=1.5)\n",
     " \n",
-    "    ax_legend = ax.legend(handles=[current_im, ax_med, ax_mean, ax_min],\n",
+    "    ax_legend = ax.legend(handles=[current_im, ax_med, ax_noise, ax_min],\n",
     "                          loc='upper right', edgecolor='k')\n",
     "    \n",
     "    return ax"
@@ -310,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,12 +449,22 @@
     "    continuous_update=True,\n",
     "    orientation='horizontal',\n",
     "    readout=True \n",
-    ")"
+    ")\n",
+    "\n",
+    "# crsigmas_slider = widgets.IntText(\n",
+    "#     options=[i for i in range(10)],\n",
+    "#     value=3,\n",
+    "#     description='crsigmas',\n",
+    "#     disabled=False,\n",
+    "#     continuous_update=True,\n",
+    "#     orientation='horizontal',\n",
+    "#     readout=True \n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,33 +499,23 @@
     "        plot_pix_vals, \n",
     "        current_file=file_slider2,\n",
     "        x=xslider, y=yslider, w=wslider, h=hslider, ymin=ymin_slider, ymax=ymax_slider,\n",
-    "        flist=fixed(flist), ax=fixed(ax2),\n",
-    "        units=fixed('COUNTS'), current_img_color=fixed('r'), c=fixed('k')\n",
+    "        flist=fixed(flist), ax=fixed(ax2),med=fixed(med), minim=fixed(minim),crsigmas=fixed(4),\n",
+    "        units=fixed('COUNTS'), current_img_color=fixed('r'), c=fixed('k'), noisemodel=fixed(noisemodel)\n",
     "    )\n",
-    "    hbox = HBox([w1, w2])\n",
+    "#     hbox = HBox([w1, w2])\n",
     "    w = widgets.GridBox([w1, w2], layout=widgets.Layout(grid_template_columns=\"repeat(2,50%)\"))\n",
     "    display(w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.close('all')\n",
-    "out.clear_output()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e56784aef684491190edb6ff5d92201c",
+       "model_id": "ac5a0cd8cd5c4c1c854e1803b527c8b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,6 +530,23 @@
    "source": [
     "out"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close('all')\n",
+    "out.clear_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -494,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
