several updates to improve documentation, handle multiple readout times for WFPC2

--- a/notebooks/howto.ipynb
+++ b/notebooks/howto.ipynb
@@ -30,7 +30,7 @@
     "import warnings\n",
     "warnings.simplefilter('ignore')\n",
     "\n",
-    "# Import packages from the hst_cosmic_rays packagefrom\n",
+    "# Import packages from the hst_cosmic_rays package\n",
     "from pipeline.label import labeler\n",
     "from pipeline.stat_utils import statshandler\n",
     "from pipeline.utils import metadata, initialize\n",
@@ -153,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a metadata object for our test file and instr\n",
@@ -510,9 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "star_label.plot(instr='STIS/CCD')"
@@ -603,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
